<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="175dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtTituloNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtTituloNombre" />

            <TextView
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtNombre" />

            <TextView
                android:id="@+id/txtTituloDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtTituloDireccion" />

            <TextView
                android:id="@+id/txtDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtDireccion" />

            <TextView
                android:id="@+id/txtTituloTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtTituloTelefono" />

            <TextView
                android:id="@+id/txtTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtTelefono" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>